Refactor ACL4SSR configuration for improved routing
Updated ruleset references and proxy groups to include additional regions and services.

--- a/ACL4SSR_WithChinaIp_WithGFW.ini
+++ b/ACL4SSR_WithChinaIp_WithGFW.ini
@@ -13,7 +13,7 @@ overwrite_original_rules=true
 ; 1. 规则集引用 (Rulesets)
 ; ============================================
 
-; --- 直连类 (国内域名/IP 全部合并至 '🎯 全球直连') ---
+; --- 直连类 ---
 ruleset=🎯 全球直连,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Cloudflarecn/Cloudflarecn.yaml
 ruleset=🎯 全球直连,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Lan/Lan.yaml
 ruleset=🎯 全球直连,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Direct/Direct.list
@@ -31,13 +31,13 @@ ruleset=📥 PT,https://fastly.jsdelivr.net/gh/cikichen/rules@main/clash/pt.list
 ruleset=🛑 全球拦截,https://fastgh.lainbo.com/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
 ruleset=🍃 应用净化,https://fastgh.lainbo.com/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
 
-; --- AI (合并 Bard) ---
+; --- AI ---
 ruleset=🤖 人工智能,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/人工智能/人工智能.list
 ruleset=🤖 人工智能,https://fastly.jsdelivr.net/gh/cikichen/rules@main/clash/OtherAI.list
 ruleset=🤖 人工智能,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Claude/Claude.list
 ruleset=🤖 人工智能,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/BardAI/BardAI.list
 
-; --- 媒体与服务 (合并 FCM) ---
+; --- 媒体与服务 ---
 ruleset=📹 油管视频,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/YouTube/YouTube.list
 ruleset=📢 谷歌服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
 ruleset=📢 谷歌服务,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Google/Google.list
@@ -47,14 +47,14 @@ ruleset=📲 电报消息,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_s
 ruleset=🎶 网易云音乐,https://fastgh.lainbo.com/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/NetEaseMusic.list
 ruleset=🌍 国外媒体,https://fastgh.lainbo.com/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 
-; --- 游戏 (合并所有平台) ---
+; --- 游戏 ---
 ruleset=🎮 游戏服务,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Blizzard/Blizzard.list
 ruleset=🎮 游戏服务,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Epic/Epic.list
 ruleset=🎮 游戏服务,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Sony/Sony.list
 ruleset=🎮 游戏服务,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Steam/Steam.list
 ruleset=🎮 游戏服务,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Xbox/Xbox.list
 
-; --- 其他兜底 ---
+; --- 兜底 ---
 ruleset=🐟 漏网之鱼,https://fastly.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/gfw.txt
 ruleset=🇺🇲 GitHub,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/GitHub/GitHub.yaml
 ruleset=🎯 全球直连,[]GEOIP,CN
@@ -64,10 +64,10 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ; 2. 策略组定义 (Proxy Groups)
 ; ============================================
 
-; 2.1 主控组
-custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🔯 故障转移`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🌴 东南亚节点`[]🇪🇺 欧洲节点`[]🇨🇦 加拿大节点`[]🇦🇺 澳洲节点`[]🌎 南美节点`[]🗺️ 其他地区`[]🚀 手动切换`[]DIRECT
+; 2.1 主控组 (加入了土耳其节点)
+custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🔯 故障转移`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🌴 东南亚节点`[]🇪🇺 欧洲节点`[]🇨🇦 加拿大节点`[]🇦🇺 澳洲节点`[]🌎 南美节点`[]🇹🇷 土耳其节点`[]🗺️ 其他地区`[]🚀 手动切换`[]DIRECT
 
-; 2.2 基础逻辑组 (国内IP/域名已合并至 全球直连)
+; 2.2 基础逻辑组
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
 custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
@@ -79,17 +79,29 @@ custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🔯 故障转移`fallback`.*`http://www.gstatic.com/generate_204`300,,50
 
-; 2.4 功能分组
-custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇯🇵 日本节点`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🌴 东南亚节点`[]🇨🇳 台湾节点`[]🇪🇺 欧洲节点`[]🇨🇦 加拿大节点`[]🇦🇺 澳洲节点`[]🌎 南美节点`[]🗺️ 其他地区`[]DIRECT
-custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🌴 东南亚节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇪🇺 欧洲节点`[]🌎 南美节点`[]🗺️ 其他地区
-custom_proxy_group=📲 电报消息`select`[]🚀 节点选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇪🇺 欧洲节点`[]🌴 东南亚节点`[]DIRECT
-custom_proxy_group=📢 谷歌服务`select`[]🚀 节点选择`[]🤖 人工智能`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇪🇺 欧洲节点
+; 2.4 功能分组 (已扩充：所有功能组都包含所有地区节点！)
+custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇯🇵 日本节点`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🌴 东南亚节点`[]🇪🇺 欧洲节点`[]🇨🇦 加拿大节点`[]🇦🇺 澳洲节点`[]🌎 南美节点`[]🇹🇷 土耳其节点`[]🗺️ 其他地区`[]DIRECT
+
+custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🌴 东南亚节点`[]🇪🇺 欧洲节点`[]🇨🇦 加拿大节点`[]🇦🇺 澳洲节点`[]🌎 南美节点`[]🇹🇷 土耳其节点`[]🗺️ 其他地区
+
+custom_proxy_group=📲 电报消息`select`[]🚀 节点选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🌴 东南亚节点`[]🇪🇺 欧洲节点`[]🇨🇦 加拿大节点`[]🇦🇺 澳洲节点`[]🌎 南美节点`[]🗺️ 其他地区`[]DIRECT
+
+; 谷歌服务：包含 AI + 所有地区
+custom_proxy_group=📢 谷歌服务`select`[]🚀 节点选择`[]🤖 人工智能`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🌴 东南亚节点`[]🇪🇺 欧洲节点`[]🇨🇦 加拿大节点`[]🇦🇺 澳洲节点`[]🌎 南美节点`[]🗺️ 其他地区
+
 custom_proxy_group=🎶 网易云音乐`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`(网易|音乐|解锁|Music|NetEase|灰)
-custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`[]🚀 节点选择`[]🤖 人工智能`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇪🇺 欧洲节点`[]🇸🇬 狮城节点
-custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇨🇦 加拿大节点`[]🇦🇺 澳洲节点
-custom_proxy_group=🎮 游戏服务`select`[]DIRECT`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇰🇷 韩国节点`[]🇪🇺 欧洲节点`[]🇸🇬 狮城节点`[]🌴 东南亚节点
-custom_proxy_group=🇺🇲 GitHub`select`[]🚀 节点选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]DIRECT
-custom_proxy_group=🤖 人工智能`select`[]🇺🇲 美国节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🇪🇺 欧洲节点`[]🇨🇦 加拿大节点`[]🇦🇺 澳洲节点`[]🚀 手动切换
+
+; 微软服务：包含 AI + 所有地区 + DIRECT
+custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`[]🚀 节点选择`[]🤖 人工智能`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🌴 东南亚节点`[]🇪🇺 欧洲节点`[]🇨🇦 加拿大节点`[]🇦🇺 澳洲节点`[]🌎 南美节点`[]🗺️ 其他地区
+
+custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🌴 东南亚节点`[]🇪🇺 欧洲节点`[]🇨🇦 加拿大节点`[]🇦🇺 澳洲节点`[]🌎 南美节点`[]🗺️ 其他地区
+
+custom_proxy_group=🎮 游戏服务`select`[]DIRECT`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🌴 东南亚节点`[]🇪🇺 欧洲节点`[]🇨🇦 加拿大节点`[]🇦🇺 澳洲节点`[]🌎 南美节点`[]🇹🇷 土耳其节点`[]🗺️ 其他地区
+
+custom_proxy_group=🇺🇲 GitHub`select`[]🚀 节点选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🌴 东南亚节点`[]🇪🇺 欧洲节点`[]🇨🇦 加拿大节点`[]🇦🇺 澳洲节点`[]DIRECT
+
+; AI 组：为了稳定性，依然排除香港和国内，但补全了其他所有可用地区
+custom_proxy_group=🤖 人工智能`select`[]🇺🇲 美国节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🌴 东南亚节点`[]🇪🇺 欧洲节点`[]🇨🇦 加拿大节点`[]🇦🇺 澳洲节点`[]🌎 南美节点`[]🗺️ 其他地区`[]🚀 手动切换
 
 ; 2.5 地区分组
 custom_proxy_group=🇭🇰 香港节点`url-test`(?i)(🇭🇰|港|HK|Hong)^((?!网站|地址|剩余|过期|实验性|日用|重置).)*$`http://cp.cloudflare.com/generate_204`300,,50
