--- a/ACL4SSR_WithChinaIp_WithGFW.ini
+++ b/ACL4SSR_WithChinaIp_WithGFW.ini
@@ -4,8 +4,8 @@
 exclude_remarks=(?i)(?:\d+(\.\d*)?\s*GB|traffic|expire|premium|github|isp|流量|网址|套餐|应急|时间|重置|剩余|[到过]期|订阅)
 
 ; === 基础设置 ===
-add_emoji=true
-remove_old_emoji=true
+add_emoji=false
+remove_old_emoji=false
 enable_rule_generator=true
 overwrite_original_rules=true
 
