--- a/ACL4SSR_WithChinaIp_WithGFW.ini
+++ b/ACL4SSR_WithChinaIp_WithGFW.ini
@@ -64,7 +64,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ; 2. 策略组定义 (Proxy Groups)
 ; ============================================
 
-; 2.1 主控组 (加入了土耳其节点)
+; 2.1 主控组
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🔯 故障转移`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🌴 东南亚节点`[]🇪🇺 欧洲节点`[]🇨🇦 加拿大节点`[]🇦🇺 澳洲节点`[]🌎 南美节点`[]🇹🇷 土耳其节点`[]🗺️ 其他地区`[]🚀 手动切换`[]DIRECT
 
 ; 2.2 基础逻辑组
@@ -79,43 +79,31 @@ custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🔯 故障转移`fallback`.*`http://www.gstatic.com/generate_204`300,,50
 
-; 2.4 功能分组 (已扩充：所有功能组都包含所有地区节点！)
+; 2.4 功能分组
 custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇯🇵 日本节点`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🌴 东南亚节点`[]🇪🇺 欧洲节点`[]🇨🇦 加拿大节点`[]🇦🇺 澳洲节点`[]🌎 南美节点`[]🇹🇷 土耳其节点`[]🗺️ 其他地区`[]DIRECT
-
 custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🌴 东南亚节点`[]🇪🇺 欧洲节点`[]🇨🇦 加拿大节点`[]🇦🇺 澳洲节点`[]🌎 南美节点`[]🇹🇷 土耳其节点`[]🗺️ 其他地区
-
 custom_proxy_group=📲 电报消息`select`[]🚀 节点选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🌴 东南亚节点`[]🇪🇺 欧洲节点`[]🇨🇦 加拿大节点`[]🇦🇺 澳洲节点`[]🌎 南美节点`[]🗺️ 其他地区`[]DIRECT
-
-; 谷歌服务：包含 AI + 所有地区
 custom_proxy_group=📢 谷歌服务`select`[]🚀 节点选择`[]🤖 人工智能`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🌴 东南亚节点`[]🇪🇺 欧洲节点`[]🇨🇦 加拿大节点`[]🇦🇺 澳洲节点`[]🌎 南美节点`[]🗺️ 其他地区
-
 custom_proxy_group=🎶 网易云音乐`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`(网易|音乐|解锁|Music|NetEase|灰)
-
-; 微软服务：包含 AI + 所有地区 + DIRECT
-custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`[]🚀 节点选择`[]🤖 人工智能`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🌴 东南亚节点`[]🇪🇺 欧洲节点`[]🇨🇦 加拿大节点`[]🇦🇺 澳洲节点`[]🌎 南美节点`[]🗺️ 其他地区
-
+custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`[]🚀 节点选择`[]🤖 人工智能`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇪🇺 欧洲节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🌴 东南亚节点`[]🇨🇦 加拿大节点`[]🇦🇺 澳洲节点`[]🌎 南美节点`[]🗺️ 其他地区
 custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🌴 东南亚节点`[]🇪🇺 欧洲节点`[]🇨🇦 加拿大节点`[]🇦🇺 澳洲节点`[]🌎 南美节点`[]🗺️ 其他地区
-
 custom_proxy_group=🎮 游戏服务`select`[]DIRECT`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🌴 东南亚节点`[]🇪🇺 欧洲节点`[]🇨🇦 加拿大节点`[]🇦🇺 澳洲节点`[]🌎 南美节点`[]🇹🇷 土耳其节点`[]🗺️ 其他地区
-
 custom_proxy_group=🇺🇲 GitHub`select`[]🚀 节点选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🌴 东南亚节点`[]🇪🇺 欧洲节点`[]🇨🇦 加拿大节点`[]🇦🇺 澳洲节点`[]DIRECT
-
-; AI 组：为了稳定性，依然排除香港和国内，但补全了其他所有可用地区
 custom_proxy_group=🤖 人工智能`select`[]🇺🇲 美国节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🌴 东南亚节点`[]🇪🇺 欧洲节点`[]🇨🇦 加拿大节点`[]🇦🇺 澳洲节点`[]🌎 南美节点`[]🗺️ 其他地区`[]🚀 手动切换
 
-; 2.5 地区分组
-custom_proxy_group=🇭🇰 香港节点`url-test`(?i)(🇭🇰|港|HK|Hong)^((?!网站|地址|剩余|过期|实验性|日用|重置).)*$`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇨🇳 台湾节点`url-test`(?i)(🇨🇳|🇹🇼|台湾|新北|彰化|TW|Taiwan)^((?!网站|地址|剩余|过期|实验性|日用|重置).)*$`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 日本节点`url-test`(?i)(🇯🇵|日本|川日|东京|大阪|埼玉|JP|Japan)^((?!网站|地址|剩余|过期|实验性|日用|重置).)*$`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇺🇲 美国节点`url-test`(?i)(🇺🇸|美国|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|西雅图|芝加哥|US|United States|America)^((?!网站|地址|剩余|过期|实验性|日用|重置).)*$`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇸🇬 狮城节点`url-test`(?i)(🇸🇬|新加坡|狮城|SG|Singapore)^((?!网站|地址|剩余|过期|实验性|日用|重置).)*$`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇰🇷 韩国节点`url-test`(?i)(🇰🇷|韩国|首尔|KR|Korea)^((?!网站|地址|剩余|过期|实验性|日用|重置).)*$`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🌴 东南亚节点`url-test`(?i)(🇸🇬|🇲🇾|🇹🇭|🇻🇳|🇵🇭|🇮🇩|🇰🇭|🇲🇲|🇧🇳|东南亚|新加坡|狮城|马来|泰国|越南|菲律宾|印尼|柬埔寨|缅甸|文莱|SG|Singapore|MY|TH|VN|PH|ID|KH|MM|BN)^((?!网站|地址|剩余|过期|实验性|日用|重置).)*$`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇪🇺 欧洲节点`url-test`(?i)(🇪🇺|🇬🇧|🇩🇪|🇫🇷|🇳🇱|🇮🇹|🇷🇺|🇪🇸|🇵🇹|🇨🇭|🇸🇪|🇳🇴|🇫🇮|🇩🇰|🇮🇪|🇦🇹|🇨🇿|🇬🇷|🇧🇪|🇭🇺|🇵🇱|🇺🇦|🇮🇸|欧洲|英国|德国|法国|荷兰|意大利|俄罗斯|西班牙|葡萄牙|瑞士|瑞典|挪威|芬兰|丹麦|爱尔兰|奥地利|捷克|希腊|比利时|匈牙利|波兰|乌克兰|冰岛|EU|UK|DE|FR|NL|IT|RU|ES|PT|CH|SE|NO|FI|DK|IE|AT|CZ|GR|BE|HU|PL|UA|IS)^((?!网站|地址|剩余|过期|实验性|日用|重置).)*$`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🌎 南美节点`url-test`(?i)(🇦🇷|🇧🇷|🇨🇱|🇨🇴|🇵🇪|🇲🇽|🇺🇾|南美|阿根廷|巴西|智利|哥伦比亚|秘鲁|墨西哥|乌拉圭|AR|BR|CL|CO|PE|MX|UY|Latin|America)^((?!网站|地址|剩余|过期).)*$`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇨🇦 加拿大节点`url-test`(?i)(🇨🇦|加拿大|蒙特利尔|温哥华|CA|Canada)^((?!网站|地址|剩余|过期|实验性|日用|重置).)*$`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇦🇺 澳洲节点`url-test`(?i)(🇦🇺|澳洲|澳大利亚|悉尼|墨尔本|AU|Australia)^((?!网站|地址|剩余|过期|实验性|日用|重置).)*$`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇹🇷 土耳其节点`url-test`(?i)(🇹🇷|土耳其|TR|Turkey)^((?!网站|地址|剩余|过期).)*$`http://cp.cloudflare.com/generate_204`300,,50
+; 2.5 地区分组 (修复为：正向先行断言)
+custom_proxy_group=🇭🇰 香港节点`url-test`(?i)(?=.*(🇭🇰|港|HK|Hong))^((?!网站|地址|剩余|过期|实验性|日用|重置).)*$`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇨🇳 台湾节点`url-test`(?i)(?=.*(🇨🇳|🇹🇼|台湾|新北|彰化|TW|Taiwan))^((?!网站|地址|剩余|过期|实验性|日用|重置).)*$`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 日本节点`url-test`(?i)(?=.*(🇯🇵|日本|川日|东京|大阪|埼玉|JP|Japan))^((?!网站|地址|剩余|过期|实验性|日用|重置).)*$`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇺🇲 美国节点`url-test`(?i)(?=.*(🇺🇸|美国|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|西雅图|芝加哥|US|United States|America))^((?!网站|地址|剩余|过期|实验性|日用|重置).)*$`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 狮城节点`url-test`(?i)(?=.*(🇸🇬|新加坡|狮城|SG|Singapore))^((?!网站|地址|剩余|过期|实验性|日用|重置).)*$`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇰🇷 韩国节点`url-test`(?i)(?=.*(🇰🇷|韩国|首尔|KR|Korea))^((?!网站|地址|剩余|过期|实验性|日用|重置).)*$`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🌴 东南亚节点`url-test`(?i)(?=.*(🇸🇬|🇲🇾|🇹🇭|🇻🇳|🇵🇭|🇮🇩|🇰🇭|🇲🇲|🇧🇳|东南亚|新加坡|狮城|马来|泰国|越南|菲律宾|印尼|柬埔寨|缅甸|文莱|SG|Singapore|MY|TH|VN|PH|ID|KH|MM|BN))^((?!网站|地址|剩余|过期|实验性|日用|重置).)*$`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇪🇺 欧洲节点`url-test`(?i)(?=.*(🇪🇺|🇬🇧|🇩🇪|🇫🇷|🇳🇱|🇮🇹|🇷🇺|🇪🇸|🇵🇹|🇨🇭|🇸🇪|🇳🇴|🇫🇮|🇩🇰|🇮🇪|🇦🇹|🇨🇿|🇬🇷|🇧🇪|🇭🇺|🇵🇱|🇺🇦|🇮🇸|欧洲|英国|德国|法国|荷兰|意大利|俄罗斯|西班牙|葡萄牙|瑞士|瑞典|挪威|芬兰|丹麦|爱尔兰|奥地利|捷克|希腊|比利时|匈牙利|波兰|乌克兰|冰岛|EU|UK|DE|FR|NL|IT|RU|ES|PT|CH|SE|NO|FI|DK|IE|AT|CZ|GR|BE|HU|PL|UA|IS))^((?!网站|地址|剩余|过期|实验性|日用|重置).)*$`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🌎 南美节点`url-test`(?i)(?=.*(🇦🇷|🇧🇷|🇨🇱|🇨🇴|🇵🇪|🇲🇽|🇺🇾|南美|阿根廷|巴西|智利|哥伦比亚|秘鲁|墨西哥|乌拉圭|AR|BR|CL|CO|PE|MX|UY|Latin|America))^((?!网站|地址|剩余|过期).)*$`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇨🇦 加拿大节点`url-test`(?i)(?=.*(🇨🇦|加拿大|蒙特利尔|温哥华|CA|Canada))^((?!网站|地址|剩余|过期|实验性|日用|重置).)*$`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇦🇺 澳洲节点`url-test`(?i)(?=.*(🇦🇺|澳洲|澳大利亚|悉尼|墨尔本|AU|Australia))^((?!网站|地址|剩余|过期|实验性|日用|重置).)*$`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇹🇷 土耳其节点`url-test`(?i)(?=.*(🇹🇷|土耳其|TR|Turkey))^((?!网站|地址|剩余|过期).)*$`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🗺️ 其他地区`url-test`(?i)^((?!(🇭🇰|港|HK|Hong|🇨🇳|🇹🇼|TW|Tai|🇯🇵|JP|Japan|🇺🇸|美|US|States|🇸🇬|SG|Sing|🇰🇷|KR|Korea|🇪🇺|EU|欧|🇬🇧|UK|🇩🇪|DE|🇫🇷|FR|🇳🇱|NL|🇷🇺|RU|🇪🇸|ES|🇨🇭|CH|🇸🇪|SE|🇳🇴|NO|🇫🇮|FI|🇨🇦|CA|Can|🇦🇺|AU|Aus|🇲🇾|MY|🇹🇭|TH|🇻🇳|VN|🇵🇭|PH|🇮🇩|ID|🇦🇷|AR|🇧🇷|BR|🇨🇱|CL|🇹🇷|TR|网站|地址|剩余|过期|实验性|日用|重置)).)*$`http://cp.cloudflare.com/generate_204`300,,50
 
 emoji=(?i:traffic|流量|应急),⌛
