--- a/clash_config_slim.yaml
+++ b/clash_config_slim.yaml
@@ -1,12 +1,12 @@
 # ==================== 基础配置 ====================
-mixed-port: 7897
-allow-lan: true
-mode: rule
-log-level: info
-unified-delay: true
-tcp-concurrent: true
-find-process-mode: strict
-global-client-fingerprint: chrome
+# mixed-port: 7897
+# allow-lan: true
+# mode: rule
+# log-level: info
+# unified-delay: true
+# tcp-concurrent: true
+# find-process-mode: strict
+# global-client-fingerprint: chrome
 
 # ==================== DNS 配置 ====================
 dns:
